fix h1 overflowing

--- a/src/styles/common/item-grid.scss
+++ b/src/styles/common/item-grid.scss
@@ -115,8 +115,8 @@ $column-count-small: 1;
 		margin-bottom: 0;
   	@include maxwidth(s){
   		font-size: 2em;
-  	}
-  	width: calc(100% + 2rem);
+		}
+		width: 100%;
     /* margin-left: 0rem; */
 		grid-column-end: $column-count-default + 1;
 		@include maxwidth(l) {
@@ -138,7 +138,8 @@ $column-count-small: 1;
     	animation: headline-in 850ms cubic-bezier(1, 0.01, 0.3, 1) 850ms forwards;
     	content: "";
     	height: 4px;
-    	width: 100%;
+  	width: calc(100% + 2rem);
+
     	position: absolute;
     	top: calc(50% - 2px);
     	left: -$padding-default;
@@ -223,7 +224,7 @@ $column-count-small: 1;
 				&:hover {
 				background-color: $cs-lightblue;
 				color: $lightpearl;
-					svg {
+					svg, path {
 						fill: $lightpearl;
 					}
 				}
